# forced-alignment-rust

./: Cargo.toml
src/: dtw.rs  lib.rs  main.rs
src/mfcc/: Cargo.toml  README.md
src/mfcc/src/: dct.rs  fft.rs  mel_filter.rs  mod.rs  pre_emphasis.rs  window.rs
src/tts_engines/: espeak_ng.rs  mod.rs
test/: aeneas_test.ipynb  m1.txt  m2.txt  m_best_path.txt
