[package]
name = "aeneas_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aeneas_rust"
crate-type = ["cdylib"]

[workspace]
members = [
    "src/mfcc",
]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies]
ndarray = "0.15"
rustfft = "6.0"
mfcc = { path = "src/mfcc" }
